--- a/templates/edit-profile.html
+++ b/templates/edit-profile.html
@@ -262,40 +262,30 @@
             </p>
 
             <div class="mt-10 border-b border-gray-900/10 pb-12">
-              <!--              <div class="col-span-full mt-10 pb-10">-->
-              <!--                <label-->
-              <!--                  for="photo"-->
-              <!--                  class="block text-sm font-medium leading-6 text-gray-900"-->
-              <!--                  >Photo</label-->
-              <!--                >-->
-              <!--                <div class="mt-2 flex items-center gap-x-3">-->
-              <!--                  <input-->
-              <!--                    class="hidden"-->
-              <!--                    type="file"-->
-              <!--                    name="avatar"-->
-              <!--                    id="avatar" />-->
-              <!--                  &lt;!&ndash; <img-->
-              <!--                    class="h-12 w-12 rounded-full"-->
-              <!--                    src="https://avatars.githubusercontent.com/u/831997"-->
-              <!--                    alt="Ahmed Shamim Hasan Shaon" /> &ndash;&gt;-->
-              <!--                  <svg-->
-              <!--                    class="h-12 w-12 text-gray-300"-->
-              <!--                    viewBox="0 0 24 24"-->
-              <!--                    fill="currentColor"-->
-              <!--                    aria-hidden="true">-->
-              <!--                    <path-->
-              <!--                      fill-rule="evenodd"-->
-              <!--                      d="M18.685 19.097A9.723 9.723 0 0021.75 12c0-5.385-4.365-9.75-9.75-9.75S2.25 6.615 2.25 12a9.723 9.723 0 003.065 7.097A9.716 9.716 0 0012 21.75a9.716 9.716 0 006.685-2.653zm-12.54-1.285A7.486 7.486 0 0112 15a7.486 7.486 0 015.855 2.812A8.224 8.224 0 0112 20.25a8.224 8.224 0 01-5.855-2.438zM15.75 9a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0z"-->
-              <!--                      clip-rule="evenodd" />-->
-              <!--                  </svg>-->
-              <!--                  <label for="avatar">-->
-              <!--                    <div-->
-              <!--                      class="rounded-md bg-white px-2.5 py-1.5 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50">-->
-              <!--                      Change-->
-              <!--                    </div>-->
-              <!--                  </label>-->
-              <!--                </div>-->
-              <!--              </div>-->
+                <div class="col-span-full mt-10 pb-10">
+                  <label
+                    for="photo"
+                    class="block text-sm font-medium leading-6 text-gray-900"
+                    >Photo</label
+                  >
+                  <div class="mt-2 flex items-center gap-x-3">
+                    <input
+                      class="hidden"
+                      type="file"
+                      name="avatar"
+                      id="avatar" />
+                    <img
+                      class="h-32 w-32 rounded-full"
+                      src="https://avatars.githubusercontent.com/u/831997"
+                      alt="Ahmed Shamim Hasan Shaon" />
+                    <label for="avatar">
+                      <div
+                        class="rounded-md bg-white px-2.5 py-1.5 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50">
+                        Change
+                      </div>
+                    </label>
+                  </div>
+                </div>
 
               <div class="grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
                 <div class="sm:col-span-3">
